Fix sidebar becoming too wide

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,7 +1,7 @@
 /* some style */
 
 * { box-sizing: border-box; }
-body, html, #app { height:100%; margin: 0 }
+body, html, #app { height: 100%; margin: 0; }
 
 
 body {
@@ -16,7 +16,7 @@ body {
 .app-container { display: grid; grid: "header" 50px "main" 1fr "footer" 50px; min-height: 100%; }
 .app-container--sidebar { grid: "header header" 50px "sidebar main" 1fr "footer footer" 50px / 1fr 3fr; }
 .app-header-container { grid-area: header; }
-.app-sidebar-container { grid-area: sidebar; }
+.app-sidebar-container { grid-area: sidebar; max-width: 100%; }
 .app-main-container { grid-area: main; padding: 5px 0 5px 0; }
 .app-footer-container { grid-area: footer; }
 
@@ -35,11 +35,11 @@ header > .controls-container { grid-area: controls; }
 .controls .rates-label { grid-area: rates-label; }
 
 /* sidebar */
-.sidebar .saved-board { display: grid; grid: "name coords" 2fr "rle rle" 1fr; cursor: pointer; padding: 0.5rem; border-top: 1px solid rgb(210, 210, 210); }
+.sidebar .saved-board { display: grid; grid: "name coords" 2fr "rle rle" 1fr / 1fr 1fr; cursor: pointer; padding: 0.5rem; border-top: 1px solid rgb(210, 210, 210); }
 .sidebar .saved-board:hover { background-color: rgba(0, 0, 0, 0.05); }
-.sidebar .saved-board > .name { grid-area: name; font-size: 1.1rem; }
-.sidebar .saved-board > .coords { grid-area: coords; font-size: 0.9rem; color: rgb(100, 100, 100); }
-.sidebar .saved-board > .rle { grid-area: rle; font-size: 0.9rem; color: rgb(100, 100, 100); }
+.sidebar .saved-board > .name { grid-area: name; font-size: 1.1rem; overflow: hidden; text-overflow: ellipsis; }
+.sidebar .saved-board > .coords { grid-area: coords; font-size: 0.9rem; color: rgb(100, 100, 100); overflow: hidden; }
+.sidebar .saved-board > .rle { grid-area: rle; font-size: 0.9rem; color: rgb(100, 100, 100); overflow: hidden; text-overflow: ellipsis; }
 
 /* Main settings */
 #viewport { width: 700px; height: 700px; }
